# cuda-fixnum

./: CMakeLists.txt  LICENCE  Makefile  README.md  cmake_install.cmake
bench/: bench.cu
paillier/: paillier.cu  paillier.h  test_pailler.cpp
src/functions/: paillier_decrypt.cu
